Adds start reading scripts