@@ -5,6 +5,11 @@
 ```bash
 mvn scala:run -DmainClass=org.jesperancinha.bridgelogistics.readings.ReadingsLauncher
 ```
+## Start Jar
+
+```shell
+java --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED -jar target/bl-passengers-readings-service-jar-with-dependencies.jar
+```
 
 ## Installing cassandra
 
